--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,22 +9,27 @@
 @custom-variant dark (&:where(.dark, .dark *));
 
 @font-face {
-  font-family: 'Modalz Tall';
-  src: url('../fonts/modalz-tall.woff') format('woff'), url('../fonts/modalz-tall.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  text-rendering: optimizeLegibility;
+    font-family: 'Modalz Tall';
+    src:
+        url('../fonts/modalz-tall.woff') format('woff'),
+        url('../fonts/modalz-tall.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 @font-face {
-  font-family: 'Modalz Short';
-  src: url('../fonts/modalz-short.woff') format('woff'), url('../fonts/modalz-short.woff2') format('woff2');
-  font-weight: normal;
-  font-style: normal;
-  text-rendering: optimizeLegibility;
+    font-family: 'Modalz Short';
+    src:
+        url('../fonts/modalz-short.woff') format('woff'),
+        url('../fonts/modalz-short.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
 
 @theme {
-    --font-sans: 'Modalz Short', 'Instrument', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-sans:
+        'Modalz Short', 'Instrument', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+        'Segoe UI Symbol', 'Noto Color Emoji';
+    --font-modalz-tall: 'Modalz Tall';
 
     --color-zinc-50: #fafafa;
     --color-zinc-100: #f5f5f5;
@@ -52,7 +57,6 @@
 }
 
 @layer base {
-
     *,
     ::after,
     ::before,
@@ -64,19 +68,35 @@
 }
 
 body {
-    cursor: url('../cursors/default.svg') 0 0, auto;
+    cursor:
+        url('../cursors/default.svg') 0 0,
+        auto;
 }
 
-h1, h2, h3 {
-  display: block;
-  margin: 0;
-  font-style: normal;
-  font-weight: normal;
-  font-family: Modalz Tall;
-  line-height: 1.2857142861;
-  -webkit-hyphens: auto;
-      -ms-hyphens: auto;
-          hyphens: auto;
+a,
+button {
+    cursor:
+        url('../cursors/cursor_pointer.svg') 0 0,
+        auto;
+}
+
+h1,
+h2,
+h3 {
+    display: block;
+    margin: 0;
+    font-style: normal;
+    font-weight: normal;
+    font-family: Modalz Tall;
+    line-height: 1.2857142861;
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    hyphens: auto;
+}
+
+input,
+button {
+    @apply rounded-none;
 }
 
 [data-flux-field]:not(ui-radio, ui-checkbox) {
@@ -84,13 +104,17 @@ h1, h2, h3 {
 }
 
 [data-flux-label] {
-    @apply  !mb-0 !leading-tight;
+    @apply !mb-0 !leading-tight;
+}
+
+[data-flux-checkbox-indicator] {
+    @apply rounded-none;
 }
 
 input:focus[data-flux-control],
 textarea:focus[data-flux-control],
 select:focus[data-flux-control] {
-    @apply outline-hidden ring-2 ring-accent ring-offset-2 ring-offset-accent-foreground;
+    @apply ring-accent ring-offset-accent-foreground ring-2 ring-offset-2 outline-hidden;
 }
 
 /* \[:where(&)\]:size-4 {
